2006-07-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/util/conf.py:
	  (duration_adjust): Tweaked default values.

2006-07-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/guiinit.py:
	  Remove ellipses from tool item labels.

2006-07-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.7.0.

	RELEASE 0.7.0

2006-07-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  Don't include AUTHORS, COPYING and README in data_files.

2006-07-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/fileopen.py:
	  (on_append_file_activate): Fixed temp_page and page confusion.

2006-07-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/fileopen.py:
	  (SplitProjectAction.is_doable): Check that there's more than one
	  subtitle.

	* lib/gaupol/gtk/delegate/test/test_edit.py:
	* lib/gaupol/gtk/delegate/test/test_fileopen.py:
	  Fixed test code.

	* data/glade/projsplit-dialog.glade:
	* lib/gaupol/gtk/dialog/projsplit.py:
	  Set minimum split point to 2.

2006-07-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/fileopen.py:
	  (on_append_file_activate): Call gtk.main_iteration() while
	  gtk.events_pending() to immediately destroy the dialog.

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/edit.py:
	  (merge_subtitles): lstrip texts.

	* lib/gaupol/gtk/delegate/preview.py:
	  (on_preview_activate): Handle None value of col.

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/enclib.py:
	  (get_locale_encoding): Do not call _translate on None but
	  instead raise ValueError. (Closes bug #6319)

2006-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/projsplit-dialog.glade:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/dialog/projsplit.py:
	* lib/gaupol/gtk/dialog/test/test_projsplit.py:
	  Implemented project splitting.

2006-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
