@@ -1,3 +1,8 @@
+2006-07-15  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/gtk/output.py:
+	  Save geometry on close.
+
 2006-07-12  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* lib/gaupol/gtk/util/conf.py:
